Fix some minor issues

--- a/Exercise-4-problems-1-2.ipynb
+++ b/Exercise-4-problems-1-2.ipynb
@@ -539,7 +539,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "afa828bf4e48018a84cc59a66efa535f",
+     "checksum": "48a5d42c9fb890922c008762e11daf72",
      "grade": false,
      "grade_id": "cell-8ee77f3e0c67051b",
      "locked": true,
@@ -614,7 +614,7 @@
     "                            xlabel='Distance from drainage divide (m)',\n",
     "                            ylabel='River channel elevation (m)',\n",
     "                            title='River channel profile evolution model',\n",
-    "                            legend = 'bottom_left',\n",
+    "                            legend = 'top_right',\n",
     "                            xticks=np.linspace(0.0, profile_length, 6),\n",
     "                            figsize=(800,600))"
    ]
@@ -729,7 +729,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "391fb8e2a504ebada76f3768b93887df",
+     "checksum": "e6f9ad5ef6016105dcf450e782a08a74",
      "grade": true,
      "grade_id": "problem_2_mg_p1_profile",
      "locked": false,
@@ -740,6 +740,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the stream power function here\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
    ]
@@ -915,7 +916,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "9d0028879320876eba8b9dec816f9dcb",
+     "checksum": "02ae46ae79c702dec41029dceffa65be",
      "grade": true,
      "grade_id": "problem_2_mg_p2_subplot",
      "locked": false,
@@ -926,6 +927,7 @@
    },
    "outputs": [],
    "source": [
+    "# This cell should produce a similar plot to the one above\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
    ]
@@ -1232,7 +1234,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "bfdb339d8a56e5fb0b1ed67bbaf9e6b7",
+     "checksum": "0129ee57d5263033cd5ab6ec256ad27b",
      "grade": true,
      "grade_id": "problem_2_mg_p4_uplift",
      "locked": false,
@@ -1244,6 +1246,7 @@
    },
    "outputs": [],
    "source": [
+    "# Run the updated stream power function here\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
    ]
