Update cell names for graderbot

--- a/Exercise-4-problems-1-2.ipynb
+++ b/Exercise-4-problems-1-2.ipynb
@@ -1114,7 +1114,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "14890d6cf590e873ada67cf342b66b50",
+     "checksum": "dbb92d1d86084e0e5f2c402afdd01b5e",
      "grade": false,
      "grade_id": "cell-668e37e61ecc55b3",
      "locked": true,
@@ -1128,7 +1128,7 @@
     "Comparing the three different inintial topography options, please answer the following questions:\n",
     "\n",
     "1. What is the starting shape of each of the initial topography options? How do they differ from one another?\n",
-    "2. What are the fastest erosion rates you see in any of the profiles? Which model produces the fastest erosion rates? Why do you think that might be?\n",
+    "2. If you run the models for different simulation times (10 ka, 100 ka, etc.), what are the fastest erosion rates you see in any of the profiles? Which model produces the fastest erosion rates? Why do you think that might be?\n",
     "3. Do the fastest erosion rates always occur in the same place, or does the location of fastest erosion change? Explain why this occurs, based on the equations for stream-power erosion presented in this week's lesson.\n",
     "4. How fast does the drainage divide migrate across the model in each case? Why do you think the rates differ?\n",
     "5. Look at the erosion rates across the profiles. Are the majority of the erosion rates greater than, less than or equal to the rock uplift rate? Based on this answer, is the topography in a steady state (i.e., not changing)?"
@@ -1257,9 +1257,9 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "cbcc25871bb467bde60701f3fad66e1d",
+     "checksum": "6884788ee4b5db59ddeb491d9605fee2",
      "grade": true,
-     "grade_id": "cell-6c99c9dproblem_2_mg_p4_uplift_caption",
+     "grade_id": "problem_2_mg_p4_uplift_caption",
      "locked": false,
      "points": 0.5,
      "schema_version": 3,
